<resources>
    <string name="button_text_cancel">取消</string>
    <string name="button_text_confirm">确定</string>
    <string name="candidate_text_tip_big">大</string>
    <string name="candidate_text_tip_default">默认大小</string>
    <string name="candidate_text_tip_preview">预览</string>
    <string name="candidate_text_tip_preview_content_text">讯飞输入法</string>
    <string name="candidate_text_tip_small">小</string>
    <string name="candidate_text_tip_title">候选字大小</string>
    <string name="handwrite_area_setting_key">setting_handwrite_key</string>
    <string name="handwrite_area_setting_title">键盘手写</string>
    <string name="handwrite_cloud_setting_key">handwrite_cloud_setting_key</string>
    <string name="handwrite_cloud_setting_title">手写云输入</string>
    <string name="handwrite_port_recomanner_setting_key">setting_handwrite_recomanner_key</string>
    <string name="handwrite_port_recomanner_setting_title">竖屏手写模式</string>
    <string name="permission_dafault_tip">"1、在系统设置、或手机管家类软件中，恢复讯飞输入法的录音权限
2、重启手机"</string>
    <string name="permission_failure_title">话筒无法录音，可能录音权限被禁。你可以尝试任意一种：</string>
    <string name="permission_guide_url">点击查看如何恢复权限</string>
    <string name="setting">讯飞输入法设置</string>
    <string name="setting_auto_add_space_key">setting_auto_add_space_key</string>
    <string name="setting_auto_add_space_title">单词追加空格</string>
    <string name="setting_balloon_enable_key">setting_balloon_enable_key</string>
    <string name="setting_balloon_enable_title">按键气泡</string>
    <string name="setting_basic_key">setting_basic_key</string>
    <string name="setting_basic_summary">模糊音、简繁体、自动联想、误按键纠错</string>
    <string name="setting_basic_title">输入设置</string>
    <string name="setting_brush">手写笔迹</string>
    <string name="setting_brush_color">笔迹颜色</string>
    <string name="setting_brush_color_msg">当前设置：</string>
    <string name="setting_brush_size">笔迹粗细</string>
    <string name="setting_brush_size_msg">当前设置：</string>
    <string name="setting_candidate_text_size">setting_candidate_text_size</string>
    <string name="setting_candidate_text_size_title">候选字体大小</string>
    <string name="setting_clear_traffic_statistics">清除</string>
    <string name="setting_correction_disabled_summary">关闭</string>
    <string name="setting_correction_enabled_summary">开启，仅全键盘有效</string>
    <string name="setting_correction_error_flag_show_disabled_summary">关闭</string>
    <string name="setting_correction_error_flag_show_enabled_summary">开启</string>
    <string name="setting_correction_error_flag_show_title">误按键纠错标记</string>
    <string name="setting_correction_flag_key">setting_correction_flag_key</string>
    <string name="setting_correction_key">setting_correction_key</string>
    <string name="setting_correction_title">误按键纠错</string>
    <string name="setting_current_traffic_statistics_user">查看语音输入使用的流量信息</string>
    <string name="setting_custom_cand_key">setting_custom_cand_key</string>
    <string name="setting_custom_cand_title">定制工具栏</string>
    <string name="setting_custom_symbol">自定义符号</string>
    <string name="setting_custom_symbol_summary">设置九宫格键盘左侧常用符号</string>
    <string name="setting_disabled">关闭</string>
    <string name="setting_display_key">setting_display_key</string>
    <string name="setting_display_summary">布局设置、按键反馈、候选字大小</string>
    <string name="setting_display_title">键盘设置</string>
    <string name="setting_enabled">开启</string>
    <string name="setting_functional_enhancements">增强功能</string>
    <string name="setting_fuzzy_pinyin">模糊拼音</string>
    <string name="setting_fuzzy_pinyin_summary">设置中文模糊音</string>
    <string name="setting_gesture_display_summary">查看手势操作说明</string>
    <string name="setting_gesture_display_title">手势指南</string>
    <string name="setting_gesture_display_title_key">setting_gesture_display_title</string>
    <string name="setting_gesture_switch_key">setting_gesture_switch_key</string>
    <string name="setting_gesture_switch_title">手势识别</string>
    <string name="setting_handwriting_pinyin_tip_key">setting_handwriting_pinyin_tip_key</string>
    <string name="setting_handwriting_pinyin_tip_title">读音提示</string>
    <string name="setting_hotword_notification_enable_title">热词通知</string>
    <string name="setting_land_keyboard_full">setting_land_keyboard_full</string>
    <string name="setting_land_keyboard_full_summary">横屏时键盘满屏幕显示</string>
    <string name="setting_land_keyboard_full_title">横屏时满屏</string>
    <string name="setting_last_traffic_statistics">上次使用信息</string>
    <string name="setting_layout_key">setting_layout_key</string>
    <string name="setting_layout_summary">切换键盘布局</string>
    <string name="setting_layout_title">布局设置</string>
    <string name="setting_notification_enable_key">setting_notification_enable_key</string>
    <string name="setting_notification_title">消息通知设置</string>
    <string name="setting_notificition_all_key">setting_notificition_all_key</string>
    <string name="setting_notificition_all_summary">通知开关</string>
    <string name="setting_notificition_all_title">消息通知设置</string>
    <string name="setting_penuppu_time_key">setting_penuppu_time_key</string>
    <string name="setting_pinyin_cloud">拼音云输入</string>
    <string name="setting_pinyin_shuangpin">双拼输入</string>
    <string name="setting_pinyin_shuangpin_gesture">双拼指南</string>
    <string name="setting_pinyin_shuangpin_gesture_summary">查看双拼方案说明</string>
    <string name="setting_predict_key">setting_predict_key</string>
    <string name="setting_punctuation">标点设置</string>
    <string name="setting_punctuation_key">setting_punctuation_key</string>
    <string name="setting_punctuation_title">句尾智能添加标点</string>
    <string name="setting_push_notification_enable_key">setting_push_notification_enable_key</string>
    <string name="setting_push_notification_enable_title">推送消息通知</string>
    <string name="setting_recover_all_key">setting_recover_all_key</string>
    <string name="setting_recover_all_summary">一键恢复所有设置项</string>
    <string name="setting_recover_all_title">恢复默认设置</string>
    <string name="setting_search_notification_enable_key">setting_search_notification_enable_key</string>
    <string name="setting_search_notification_enable_title">搜索候选</string>
    <string name="setting_show_suggestions">中文联想</string>
    <string name="setting_sound_feedback_volume_key">setting_sound_feedback_volume_key</string>
    <string name="setting_sound_feedback_volume_title">按键音设置教程</string>
    <string name="setting_space_select_candidate_key">setting_space_select_candidate_key</string>
    <string name="setting_space_select_candidate_title">空格键选择联想词</string>
    <string name="setting_speech">语音设置</string>
    <string name="setting_speech_key">setting_speech_key</string>
    <string name="setting_speech_language">语言设置</string>
    <string name="setting_speech_language_key">setting_speech_language_key</string>
    <string name="setting_speech_language_title">识别模式</string>
    <string name="setting_speech_summary">标点、语言、等待时间、流量统计</string>
    <string name="setting_speech_title">语音设置</string>
    <string name="setting_stroke_color_key">setting_stroke_color_key</string>
    <string name="setting_stroke_width_key">setting_stroke_width_key</string>
    <string name="setting_syn_contact_summary">联网云优化联系人姓名识别效果</string>
    <string name="setting_total_traffic_statistics">总体使用信息</string>
    <string name="setting_traffic_last_use_begin_time_key">setting_traffic_last_use_begin_time_key</string>
    <string name="setting_traffic_last_use_begin_time_title">开始时间</string>
    <string name="setting_traffic_last_use_down_key">setting_traffic_last_use_down_key</string>
    <string name="setting_traffic_last_use_down_title">下行流量</string>
    <string name="setting_traffic_last_use_time_key">setting_traffic_last_use_time_key</string>
    <string name="setting_traffic_last_use_time_title">使用时长</string>
    <string name="setting_traffic_last_use_up_key">setting_traffic_last_use_up_key</string>
    <string name="setting_traffic_last_use_up_title">上行流量</string>
    <string name="setting_traffic_statistics">流量统计</string>
    <string name="setting_traffic_statistics_clear_key">setting_traffic_statistics_clear_key</string>
    <string name="setting_traffic_statistics_clear_summary">点击清除所有统计信息</string>
    <string name="setting_traffic_statistics_clear_title">全部清除</string>
    <string name="setting_traffic_statistics_key">setting_traffic_statistics_key</string>
    <string name="setting_traffic_use_down_total_key">setting_traffic_use_down_total_key</string>
    <string name="setting_traffic_use_down_total_title">下行流量</string>
    <string name="setting_traffic_use_time_total_key">setting_traffic_use_time_total_key</string>
    <string name="setting_traffic_use_time_total_title">使用时长</string>
    <string name="setting_traffic_use_up_total_key">setting_traffic_use_up_total_key</string>
    <string name="setting_traffic_use_up_total_title">上行流量</string>
    <string name="setting_vad">说话结束等待时间</string>
    <string name="setting_vad_key">setting_vad_key</string>
    <string name="setting_vad_summary">当前设置：</string>
    <string name="setting_vad_wait_time">等待时间</string>
    <string name="setting_version_notification_enable_key">setting_version_notification_enable_key</string>
    <string name="setting_version_notification_enable_title">新版本通知</string>
    <string name="setting_vibrate_duration_key">setting_vibrate_duration_key</string>
    <string name="setting_vibrate_duration_title">按键振动</string>
    <string name="setting_write_sensitive">手写灵敏度</string>
    <string name="setting_write_sensitive_key">setting_write_sensitive_key</string>
    <string name="setting_write_speed">抬笔时间</string>
    <string name="setting_write_speed_msg">当前设置：</string>
    <string name="setting_wrtiing">手写设置</string>
    <string name="setting_wrtiing_key">setting_wrtiing_key</string>
    <string name="setting_wrtiing_summary">键盘手写、笔迹设置、抬笔时间、云手写</string>
    <string name="setting_wrtiing_title">手写设置</string>
    <string name="settings_assessibility_category">辅助</string>
    <string name="settings_custom_symbol_key">settings_custom_symbol_key</string>
    <string name="settings_english_capitalize">切换大写时自动锁定</string>
    <string name="settings_english_capitalize_disabled_summary">关闭</string>
    <string name="settings_english_capitalize_enabled_summary">开启</string>
    <string name="settings_english_capitalize_key">setting_english_capitalize_key</string>
    <string name="settings_english_category">英文</string>
    <string name="settings_fuzzy_key">settings_fuzzy_key</string>
    <string name="settings_hardkeyboard_english_input">硬键盘英文输入</string>
    <string name="settings_hardkeyboard_english_input_key">settings_hardkeyboard_english_input_key</string>
    <string name="settings_key_feedback">按键反馈</string>
    <string name="settings_keyboard_adjustment">键盘调节</string>
    <string name="settings_memory_single_word">中文单字记忆</string>
    <string name="settings_memory_single_word_disabled_summary">关闭</string>
    <string name="settings_memory_single_word_enabled_summary">开启</string>
    <string name="settings_memory_single_word_key">settings_memory_single_word_key</string>
    <string name="settings_mix_input">混合输出英文单词</string>
    <string name="settings_mix_input_disabled_summary">关闭</string>
    <string name="settings_mix_input_enabled_summary">开启</string>
    <string name="settings_mix_input_key">settings_mix_input_key</string>
    <string name="settings_pinyin">拼音</string>
    <string name="settings_pinyin_cloud_key">settings_pinyin_cloud_key</string>
    <string name="settings_pinyin_shuangpin_gesture_key">settings_pinyin_shuangpin_gesture_key</string>
    <string name="settings_pinyin_shuangpin_key">settings_pinyin_shuangpin_key</string>
    <string name="settings_predict_category">联想</string>
    <string name="settings_traditional_chinese">繁体输出</string>
    <string name="settings_traditional_chinese_category">繁体</string>
    <string name="settings_traditional_chinese_key">settings_traditional_chinese_key</string>
</resources>