<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_basic_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_pinyin">
        <PreferenceScreen android:title="@string/setting_fuzzy_pinyin" android:key="@string/settings_fuzzy_key" android:summary="@string/setting_fuzzy_pinyin_summary" />
        <ListPreference android:persistent="false" android:entries="@array/handwrite_cloud_setting_entries" android:title="@string/setting_pinyin_cloud" android:key="@string/settings_pinyin_cloud_key" android:entryValues="@array/handwrite_cloud_setting_entry_values" />
        <CheckBoxPreference android:persistent="false" android:title="@string/settings_mix_input" android:key="@string/settings_mix_input_key" android:summaryOn="@string/settings_mix_input_enabled_summary" android:summaryOff="@string/settings_mix_input_disabled_summary" />
        <ListPreference android:persistent="false" android:entries="@array/pinyin_shuangpin_setting_entries" android:title="@string/setting_pinyin_shuangpin" android:key="@string/settings_pinyin_shuangpin_key" android:entryValues="@array/pinyin_shuangpin_entry_values" />
        <PreferenceScreen android:title="@string/setting_pinyin_shuangpin_gesture" android:key="@string/settings_pinyin_shuangpin_gesture_key" android:summary="@string/setting_pinyin_shuangpin_gesture_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_traditional_chinese_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/settings_traditional_chinese" android:key="@string/settings_traditional_chinese_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_predict_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_show_suggestions" android:key="@string/setting_predict_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_space_select_candidate_title" android:key="@string/setting_space_select_candidate_key" android:dependency="@string/setting_predict_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_english_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_auto_add_space_title" android:key="@string/setting_auto_add_space_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
        <CheckBoxPreference android:persistent="false" android:title="@string/settings_english_capitalize" android:key="@string/settings_english_capitalize_key" android:summaryOn="@string/settings_english_capitalize_enabled_summary" android:summaryOff="@string/settings_english_capitalize_disabled_summary" />
        <ListPreference android:persistent="false" android:entries="@array/settings_hardkeyboard_english_input_entries" android:title="@string/settings_hardkeyboard_english_input" android:key="@string/settings_hardkeyboard_english_input_key" android:entryValues="@array/settings_hardkeyboard_english_input_entry_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_assessibility_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_correction_title" android:key="@string/setting_correction_key" android:summaryOn="@string/setting_correction_enabled_summary" android:summaryOff="@string/setting_correction_disabled_summary" />
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_correction_error_flag_show_title" android:key="@string/setting_correction_flag_key" android:summaryOn="@string/setting_correction_error_flag_show_enabled_summary" android:summaryOff="@string/setting_correction_error_flag_show_disabled_summary" />
        <CheckBoxPreference android:persistent="false" android:title="@string/settings_memory_single_word" android:key="@string/settings_memory_single_word_key" android:summaryOn="@string/settings_memory_single_word_enabled_summary" android:summaryOff="@string/settings_memory_single_word_disabled_summary" />
    </PreferenceCategory>
    <PreferenceScreen android:title="@string/setting_custom_symbol" android:key="@string/settings_custom_symbol_key" android:summary="@string/setting_custom_symbol_summary" />
</PreferenceScreen>