<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.iflytek.inputmethod">
    <PreferenceScreen android:title="@string/setting_basic_title" android:key="@string/setting_basic_key" android:summary="@string/setting_basic_summary" />
    <PreferenceScreen android:title="@string/setting_display_title" android:key="@string/setting_display_key" android:summary="@string/setting_display_summary" />
    <PreferenceScreen android:title="@string/setting_speech_title" android:key="@string/setting_speech_key" android:summary="@string/setting_speech_summary" />
    <PreferenceScreen android:title="@string/setting_wrtiing_title" android:key="@string/setting_wrtiing_key" android:summary="@string/setting_wrtiing_summary" />
    <PreferenceScreen android:title="@string/setting_notificition_all_title" android:key="@string/setting_notificition_all_key" android:summary="@string/setting_notificition_all_summary" />
    <PreferenceScreen android:title="@string/setting_recover_all_title" android:key="@string/setting_recover_all_key" android:summary="@string/setting_recover_all_summary" />
</PreferenceScreen>