<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_speech"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.iflytek.inputmethod">
    <PreferenceScreen android:title="@string/setting_traffic_statistics" android:key="@string/setting_traffic_statistics_key" android:summary="@string/setting_current_traffic_statistics_user" />
    <com.iflytek.inputmethod.setting.view.preference.speech.SpeechVadCheckTimePreference android:persistent="false" android:title="@string/setting_vad" android:key="@string/setting_vad_key" android:summary="@string/setting_vad_summary" android:dialogTitle="@string/setting_vad_wait_time" android:positiveButtonText="@string/button_text_confirm" android:negativeButtonText="@string/button_text_cancel" android:dialogLayout="@layout/pref_dialog_view" />
    <PreferenceCategory android:title="@string/setting_punctuation">
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_punctuation_title" android:key="@string/setting_punctuation_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_speech_language">
        <PreferenceScreen android:title="@string/setting_speech_language_title" android:key="@string/setting_speech_language_key" android:summary="@string/setting_syn_contact_summary" />
    </PreferenceCategory>
</PreferenceScreen>