<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_display_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/setting_layout_title" android:key="@string/setting_layout_key" android:summary="@string/setting_layout_summary" />
    <Preference android:title="@string/setting_custom_cand_title" android:key="@string/setting_custom_cand_key" />
    <PreferenceCategory android:title="@string/settings_key_feedback">
        <Preference android:title="@string/setting_sound_feedback_volume_title" android:key="@string/setting_sound_feedback_volume_key" />
        <com.iflytek.inputmethod.setting.view.preference.PreviewListPreference android:persistent="false" android:entries="@array/vibrate_duration_entries" android:title="@string/setting_vibrate_duration_title" android:key="@string/setting_vibrate_duration_key" android:entryValues="@array/vibrate_duration_entry_values" app:soundEffectEnabled="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_balloon_enable_title" android:key="@string/setting_balloon_enable_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_keyboard_adjustment">
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_land_keyboard_full_title" android:key="@string/setting_land_keyboard_full" android:summary="@string/setting_land_keyboard_full_summary" android:defaultValue="true" />
        <com.iflytek.inputmethod.setting.view.preference.keyboard.CandidateFontSizePreference android:persistent="false" android:title="@string/setting_candidate_text_size_title" android:key="@string/setting_candidate_text_size" android:dialogTitle="@string/candidate_text_tip_title" android:positiveButtonText="@string/button_text_confirm" android:negativeButtonText="@null" android:dialogLayout="@layout/menu_adjust_font_size" />
    </PreferenceCategory>
</PreferenceScreen>