<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_wrtiing"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:persistent="false" android:entries="@array/handwrite_port_recomanner_setting_entries" android:title="@string/handwrite_port_recomanner_setting_title" android:key="@string/handwrite_port_recomanner_setting_key" android:entryValues="@array/handwrite_port_recomanner_setting_entry_values" />
    <ListPreference android:persistent="false" android:entries="@array/handwrite_area_setting_entries" android:title="@string/handwrite_area_setting_title" android:key="@string/handwrite_area_setting_key" android:entryValues="@array/handwrite_area_setting_entry_values" />
    <ListPreference android:persistent="false" android:entries="@array/write_sensitive_entries" android:title="@string/setting_write_sensitive" android:key="@string/setting_write_sensitive_key" android:entryValues="@array/write_sensitive_entry_values" />
    <com.iflytek.inputmethod.setting.view.preference.handwrite.WriteRecognizeSpeedPreference android:persistent="false" android:title="@string/setting_write_speed" android:key="@string/setting_penuppu_time_key" android:summary="@string/setting_write_speed_msg" android:dialogTitle="@string/setting_write_speed" android:positiveButtonText="@string/button_text_confirm" android:negativeButtonText="@string/button_text_cancel" android:dialogLayout="@layout/pref_dialog_view" />
    <PreferenceCategory android:title="@string/setting_brush">
        <com.iflytek.inputmethod.setting.view.preference.handwrite.ColorPickerPreference android:persistent="false" android:title="@string/setting_brush_color" android:key="@string/setting_stroke_color_key" android:summary="@string/setting_brush_color_msg" android:dialogTitle="@string/setting_brush_color" android:positiveButtonText="@string/button_text_confirm" android:negativeButtonText="@string/button_text_cancel" android:dialogLayout="@layout/pref_dialog_view" />
        <com.iflytek.inputmethod.setting.view.preference.handwrite.StrokeWidthPreference android:persistent="false" android:title="@string/setting_brush_size" android:key="@string/setting_stroke_width_key" android:summary="@string/setting_brush_size_msg" android:dialogTitle="@string/setting_brush_size" android:positiveButtonText="@string/button_text_confirm" android:negativeButtonText="@string/button_text_cancel" android:dialogLayout="@layout/pref_dialog_view" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_functional_enhancements">
        <ListPreference android:persistent="false" android:entries="@array/handwrite_cloud_setting_entries" android:title="@string/handwrite_cloud_setting_title" android:key="@string/handwrite_cloud_setting_key" android:entryValues="@array/handwrite_cloud_setting_entry_values" />
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_handwriting_pinyin_tip_title" android:key="@string/setting_handwriting_pinyin_tip_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
        <CheckBoxPreference android:persistent="false" android:title="@string/setting_gesture_switch_title" android:key="@string/setting_gesture_switch_key" android:summaryOn="@string/setting_enabled" android:summaryOff="@string/setting_disabled" />
        <PreferenceScreen android:title="@string/setting_gesture_display_title" android:key="@string/setting_gesture_display_title_key" android:summary="@string/setting_gesture_display_summary" />
    </PreferenceCategory>
</PreferenceScreen>