<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/candidate_text_tip_preview" />
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/candidate_font_size_preview_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:minHeight="50.0dip" android:text="@string/candidate_text_tip_preview_content_text" />
        <SeekBar android:id="@id/candidate_font_size_preview_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="4" android:progress="2" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/candidate_text_tip_small" android:layout_alignParentLeft="true" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/candidate_text_tip_big" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <CheckBox android:id="@id/candidate_font_size_preview_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/candidate_text_tip_default" />
    </LinearLayout>
</ScrollView>