<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/SP_15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/DIP_16" android:layout_marginRight="@dimen/DIP_16" android:text="@string/permission_failure_title" />
    <TextView android:textSize="@dimen/SP_15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/DIP_16" android:layout_marginRight="@dimen/DIP_16" android:layout_marginBottom="@dimen/DIP_10" android:text="@string/permission_dafault_tip" />
    <TextView android:textSize="@dimen/SP_15" android:textColor="@color/website_text_color" android:id="@id/url_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/DIP_16" android:layout_marginRight="@dimen/DIP_16" android:layout_marginBottom="@dimen/DIP_8" android:text="@string/permission_guide_url" />
</LinearLayout>